--- a/languages/es/strings.xml
+++ b/languages/es/strings.xml
@@ -2,12 +2,12 @@
     <string name="app_name">Droid Dashcam - DVR de conducción</string>
 
     <string name="any_text">Ningún</string>
-    <string name="close">Cerca</string>
+    <string name="close">Cerrar</string>
     <string name="default_text">Defecto</string>
-    <string name="disabled_text">Discapacitado</string>
+    <string name="disabled_text">Desactivado</string>
     <string name="no_ads_text">(Sin publicidad)</string>
     <string name="zoom_text">zoom</string>
-    <string name="reset">descarga</string>
+    <string name="reset">reseteo</string>
     <string name="unknown">Desconocido</string>
 
     <string name="camera">Cámara</string>
@@ -19,7 +19,7 @@
     <string name="camera_error_text">DroidDashcam: la grabación de video se detuvo porque la cámara del dispositivo dejó de funcionar</string>
     <string name="camera_external">Cámara USB externa</string>
     <string name="camera_focal_length">Longitud focal</string>
-    <string name="camera_fov_text">Ángulos de visión (16: 9)</string>
+    <string name="camera_fov_text">Ángulos de visión (16:9)</string>
     <string name="camera_fov_vertical_text">vertical</string>
     <string name="camera_fov_horbizonal_text">horizontal</string>
     <string name="camera_front">Cámara frontal</string>
@@ -29,7 +29,7 @@
 
     <string name="dialog_camera_not_found_msg_text">Este dispositivo no tiene una cámara incorporada y no es compatible con cámaras externas. Clausura…</string>
     <string name="dialog_camera_not_found_text">Cámara no encontrada</string>
-    <string name="dialog_go_to_settings_text">Configuración abierta</string>
+    <string name="dialog_go_to_settings_text">Ir a configuración</string>
     <string name="dialog_report_the_error_text_btn">Reportar un error</string>
     <string name="dialog_select_camera_text">Seleccionar camara</string>
     <string name="dialog_skip_btn_title">Saltar</string>
@@ -52,7 +52,7 @@
     <string name="format_meters">metro</string>
     <string name="format_minutes">min.</string>
     <string name="format_gps_speed">Velocidad GPS</string>
-    <string name="format_speed_measure_kilometers">km /h</string>
+    <string name="format_speed_measure_kilometers">km/h</string>
     <string name="format_speed_measure_miles">mph</string>
 
     <string name="msg_activity_battery_is_not_ignoring_msg_text">Droid Dashcam no está excluido de la optimización de la batería. Si la cámara no funciona en segundo plano o algo más, agregue esta aplicación a las excepciones del modo de ahorro de energía.</string>
@@ -99,7 +99,7 @@
     <string name="notification_service_aux_checker">conector de audio (Aux)</string>
     <string name="notification_service_bl_checker">Bluetooth</string>
     <string name="notification_service_checker">análisis</string>
-    <string name="notification_service_power_checker">cargando</string>
+    <string name="notification_service_power_checker">Cargando</string>
     <string name="notification_start_service_error_sub_text">Haga clic en la notificación para iniciar la aplicación. No tiene permiso para todas las aplicaciones o el dispositivo se ha bloqueado</string>
     <string name="notification_start_service_error_text">No se pudo iniciar el servicio de grabación al arrancar el dispositivo</string>
     <string name="notification_stop_text">Detener</string>
@@ -164,8 +164,8 @@
     <string name="prefs_faq_sum_text">Preguntas frecuentes</string>
     <string name="prefs_float_size_increase_text">Tamaño de los botones en una ventana flotante</string>
     <string name="from">desde</string>
-    <string name="to">antes de</string>
-    <string name="prefs_fps_value_from_to_stable_text">(único día, estable)</string>
+    <string name="to">hasta</string>
+    <string name="prefs_fps_value_from_to_stable_text">(día solo, estable)</string>
     <string name="prefs_fps_value_from_to_text">(día y noche)</string>
     <string name="prefs_frequent_network_requests_text">(solicitudes frecuentes de la red)</string>
     <string name="prefs_g_sensor_force_high">Alto</string>
@@ -190,16 +190,16 @@
     <string name="prefs_location_update_frequency_text">Tasa de actualización de GPS</string>
     <string name="prefs_meters_accuracy_value_text">metros de precisión</string>
     <string name="prefs_optical_zoom_text">Zoom óptico (zoom) /distancia focal</string>
-    <string name="prefs_orientation_landscape">Paisaje</string>
-    <string name="prefs_orientation_landscape_reversed">Reverso del álbum</string>
-    <string name="prefs_orientation_portrait">Retrato</string>
+    <string name="prefs_orientation_landscape">Apaisado</string>
+    <string name="prefs_orientation_landscape_reversed">Apaisado inverso</string>
+    <string name="prefs_orientation_portrait">Vertical</string>
     <string name="prefs_other_auto_deleting_sum_text">Elimina automáticamente los videos más antiguos durante la grabación si no hay suficiente espacio para videos nuevos</string>
     <string name="prefs_other_auto_deleting_text">Grabación en bucle</string>
-    <string name="prefs_other_keep_screen_on_text">Deja la pantalla encendida</string>
+    <string name="prefs_other_keep_screen_on_text">Dejar la pantalla encendida</string>
     <string name="prefs_other_miles_sum_text">Actívelo para usar millas en lugar de kilómetros</string>
     <string name="prefs_other_miles_text">Visualización en millas, pies</string>
-    <string name="prefs_other_path_photo_text">Ubicación de la foto (carpeta /ruta)</string>
-    <string name="prefs_other_path_text">Ubicación del video (carpeta /ruta)</string>
+    <string name="prefs_other_path_photo_text">Ubicación de la foto (carpeta/ruta)</string>
+    <string name="prefs_other_path_text">Ubicación del video (carpeta/ruta)</string>
     <string name="prefs_other_settings_sum_text">Ubicación del video (guardar carpeta), duración del video, grabación en bucle, sensor G, GPS</string>
     <string name="prefs_other_settings_text">Otros ajustes</string>
     <string name="prefs_other_show_address_text">Dirección de ubicación actual</string>
@@ -209,7 +209,7 @@
     <string name="prefs_other_show_ui_elements_text">Elementos para mostrar en la pantalla</string>
     <string name="prefs_other_video_duration_text">Duración del video: con qué frecuencia se debe guardar</string>
     <string name="prefs_overlay_app_btn_text">Iniciar la aplicacion</string>
-    <string name="prefs_overlay_buttons_text">Botones /elementos en una ventana flotante</string>
+    <string name="prefs_overlay_buttons_text">Botones/elementos en una ventana flotante</string>
     <string name="prefs_overlay_close_btn_text">Cerrar una ventana</string>
     <string name="prefs_overlay_drag_btn_text">Arrastra la ventana</string>
     <string name="prefs_overlay_speed_text">Mostrar velocidad</string>
@@ -218,7 +218,7 @@
     <string name="prefs_pinch_to_zoom_text">Habilitar el zoom de la pantalla</string>
     <string name="prefs_policy_text">Política de privacidad</string>
     <string name="prefs_rate_sum_text">Califica la aplicación en Play Store</string>
-    <string name="prefs_rate_text">Estimar</string>
+    <string name="prefs_rate_text">Puntuar</string>
     <string name="prefs_recommendations_category_text">Recomendaciones</string>
     <string name="prefs_rules_auto_category_camera_motion_text">Detección de movimiento por cámara</string>
     <string name="prefs_rules_auto_lock_file_sum_text">Bloquear video para que no se borre automáticamente (sobrescriba) cuando se detecta un golpe</string>
@@ -235,18 +235,18 @@
     <string name="prefs_screen_autostart_text">Grabación de inicio automático</string>
     <string name="prefs_screen_ui_summary_text">Pantalla de pulsación rápida /prolongada, pantalla apagada, visualización de dirección y velocidad, ventana emergente, botones y más</string>
     <string name="prefs_screen_ui_title">Interfaz (UI)</string>
-    <string name="prefs_screen_video_day_night_mode_sum_text">Cambia automáticamente los modos de día /noche de la cámara en momentos específicos</string>
-    <string name="prefs_screen_video_day_night_mode_text">Configuración automática de día /noche</string>
+    <string name="prefs_screen_video_day_night_mode_sum_text">Cambia automáticamente los modos de día/noche de la cámara en momentos específicos</string>
+    <string name="prefs_screen_video_day_night_mode_text">Configuración automática de día/noche</string>
     <string name="prefs_settings_bitrate_sum_text">Tasa de bits más alta: mejor calidad, pero mayor tamaño de archivo de video</string>
     <string name="prefs_settings_fps_sum_text">Más FPS: video más fluido, pero descarga de batería más rápida. Es mejor establecer el primer valor al más bajo (el segundo puede ser más alto) para una mejor grabación en la oscuridad</string>
     <string name="prefs_share_sum_text">Envía esta aplicación a tus amigos</string>
-    <string name="prefs_share_text">Compartir este</string>
-    <string name="prefs_show_audio_btn_text">Activación /desactivación de la grabación de audio</string>
+    <string name="prefs_share_text">Compartir</string>
+    <string name="prefs_show_audio_btn_text">Activación/desactivación de la grabación de audio</string>
     <string name="prefs_show_buttons_sum_text">Botones para cambiar de cámara, activar /desactivar la grabación de audio, flash, modo nocturno, bloquear el video para que no se sobrescriba</string>
     <string name="prefs_show_buttons_text">Botones en la pantalla</string>
     <string name="prefs_show_camera_change_btn_text">Cambio de cámara</string>
-    <string name="prefs_show_day_night_mode_btn_text">Modos día /noche /automático</string>
-    <string name="prefs_show_flash_btn_text">Flash encendido /apagado</string>
+    <string name="prefs_show_day_night_mode_btn_text">Modos día/noche/automático</string>
+    <string name="prefs_show_flash_btn_text">Flash encendido/apagado</string>
     <string name="prefs_show_lock_btn_text">Bloquear videos para que no se sobrescriban</string>
     <string name="prefs_show_overlay_btn_sum_text">Muestra una ventana con botones de control encima de todas las aplicaciones.</string>
     <string name="prefs_show_overlay_btn_text">Mostrar ventana flotante</string>
@@ -264,8 +264,8 @@
     <string name="prefs_subtitles_custom_text_sum_text">Por ejemplo, una matrícula</string>
     <string name="prefs_subtitles_custom_text_text">Texto adicional</string>
     <string name="prefs_subtitles_date_format_text">Formato de fecha</string>
-    <string name="prefs_subtitles_date_text">Fecha y hora)</string>
-    <string name="prefs_subtitles_date_time_system_text">Sistémico</string>
+    <string name="prefs_subtitles_date_text">Sobreimpresionar fecha (marca de tiempo)</string>
+    <string name="prefs_subtitles_date_time_system_text">Sistema</string>
     <string name="prefs_subtitles_in_english_text">subtitulos en ingles</string>
     <string name="prefs_subtitles_settings_sum_text">Subtítulos de video superpuestos: fecha (hora), dirección de ubicación, coordenadas y velocidad</string>
     <string name="prefs_subtitles_settings_text">Configuración de subtítulos</string>
@@ -282,8 +282,8 @@
     <string name="prefs_system_alert_window_text">Resolución en la parte superior de todas las ventanas</string>
     <string name="prefs_tip_apply_auto_rec_on_text">Regrese a la pantalla de inicio (grabaciones) para aplicar esta configuración e iniciar el servicio de seguimiento</string>
     <string name="prefs_toolbar_title_setting">Ajustes</string>
-    <string name="prefs_ui_click_none_text">Nada que hacer</string>
-    <string name="prefs_ui_click_start_stop_rec_text">Iniciar /detener la grabación</string>
+    <string name="prefs_ui_click_none_text">Nada</string>
+    <string name="prefs_ui_click_start_stop_rec_text">Iniciar/detener la grabación</string>
     <string name="prefs_ui_click_text">Toque rápido en la pantalla</string>
     <string name="prefs_ui_long_click_text">Pulsación larga en la pantalla</string>
     <string name="prefs_value_secs_few_text">segundos</string>
@@ -324,7 +324,7 @@
     <string name="rec_day_night_btn_auto_text">Auto</string>
     <string name="rec_fix_short_text">Corregir</string>
     <string name="rec_fix_text">Corregir</string>
-    <string name="rec_free_space_text">Gratis</string>
+    <string name="rec_free_space_text">Libre</string>
     <string name="rec_gps_status_satellites_few_text">satélites</string>
     <string name="rec_gps_status_satellites_many_text">satélites</string>
     <string name="rec_gps_status_satellites_one_text">satélite</string>
@@ -365,34 +365,34 @@
     <string name="videos_dialog_delete_folder_confirm_subtitle_other">¿Está seguro de que desea eliminar los datos de la carpeta de videos\?</string>
     <string name="videos_dialog_delete_multiple_files_title">Eliminar archivos de video</string>
     <string name="videos_dialog_delete_multiple_folders_title">Eliminar carpetas de videos</string>
-    <string name="videos_empty_text">Vídeos que faltan</string>
+    <string name="videos_empty_text">Sin vídeos</string>
     <string name="videos_file_action_lock_dlg_title">¿Bloquear este video para que no se elimine automáticamente (sobrescribirlo)\?</string>
     <string name="videos_file_deletion_mode">Modo de eliminación</string>
     <string name="videos_file_item_share">Compartir este</string>
-    <string name="videos_file_item_watch">Reloj</string>
+    <string name="videos_file_item_watch">Reproducir</string>
     <string name="videos_file_sort_asc">Orden ascendente</string>
     <string name="videos_file_sort_desc">Orden descendiente</string>
-    <string name="videos_file_was_locked_text">El archivo de video se ha movido a una carpeta protegida.</string>
+    <string name="videos_file_was_locked_text">El archivo de vídeo se ha movido a una carpeta protegida.</string>
     <string name="videos_item_mode_deletion_exit_text">Salir del modo de eliminación</string>
     <string name="videos_locked_folder_text">Protegido contra sobrescritura</string>
     <string name="videos_menu_delete">Borrar</string>
     <string name="videos_menu_refresh">Actualizar</string>
     <string name="videos_menu_select_all">Elegir todos</string>
-    <string name="videos_menu_sorting">Clasificación</string>
+    <string name="videos_menu_sorting">Ordenar</string>
     <string name="videos_menu_storage">Memoria</string>
     <string name="videos_no_storage_permission_dlg_msg_text">Abra la configuración de la aplicación y permita el acceso al almacenamiento en la memoria del teléfono</string>
     <string name="videos_no_storage_permission_dlg_title_text">Sin permiso de almacenamiento</string>
     <string name="videos_select_files_for_deleting">Seleccionar archivos de video para eliminar</string>
     <string name="videos_storage_select_dlg_title">Seleccionar almacenamiento de video</string>
-    <string name="videos_temporary_folder_text">Videos cronometrados</string>
-    <string name="videos_toolbar_subtitle">Grabaciones de video</string>
+    <string name="videos_temporary_folder_text">Videos temporales</string>
+    <string name="videos_toolbar_subtitle">Grabaciones de vídeo</string>
 
 	
     <string name="prefs_app_launch_list_loading_msg_text">Espere por favor. La lista de aplicaciones sigue cargando…</string>
     <string name="prefs_warnings_text">Advertencias</string>
     <string name="prefs_beep_each_start_recording_sum_text">Señal al comienzo de la grabación del siguiente archivo de video</string>
     <string name="prefs_beep_each_start_recording_text">Pitido al grabar</string>
-    <string name="prefs_translate_text">Traducción de aplicaciones</string>
+    <string name="prefs_translate_text">Traducción de la aplicación</string>
     <string name="prefs_translate_sum_text">Ayuda a mejorar o corregir la traducción del texto en tu idioma</string>
     <string name="prefs_launch_app_auto_text">Inicie la aplicación cuando comience la grabación de video</string>
 
