--- a/languages/fi/strings.xml
+++ b/languages/fi/strings.xml
@@ -5,7 +5,7 @@
     <string name="close">kiinni</string>
     <string name="default_text">Oletus</string>
     <string name="disabled_text">Liikuntarajoitteinen</string>
-    <string name="donate_dialog_item_no_ads_text">(Ilman mainoksia)</string>
+    <string name="donate_dialog_item_no_ads_text">(ilman mainoksia)</string>
     <string name="zoom_text">Zoomaus</string>
     <string name="reset">purkaa</string>
     <string name="unknown">Tuntematon</string>
@@ -15,8 +15,8 @@
     <string name="camera_back">Takakamera</string>
     <string name="camera_background_permission_error_msg">Sinun on suoritettava sovellus kerran, jotta voit käyttää kameraa taustalla</string>
     <string name="camera_error_background_tried_use_text">Android 11+ -käyttöjärjestelmässä sovelluksen on oltava käynnissä ja näkyvissä vähintään kerran ennen kuin aloitat tallennuksen taustalla, jotta kameraa voi käyttää taustalla. Siksi laitteen uudelleenkäynnistyksen jälkeen aseta sovellus näkyväksi ja älä sen jälkeen sulje tallennuspalvelua, sen pitäisi jäädä ilmoituskeskukseen.</string>
-    <string name="camera_error_busy">DroidDashcam: Videon tallennus on pysähtynyt, koska kamera on toisen sovelluksen käytössä</string>
-    <string name="camera_error_text">DroidDashcam: Videon tallennus lopetettiin, koska laitteen kamera lakkasi toimimasta</string>
+    <string name="camera_error_busy">Droid Dashcam: Videon tallennus on pysähtynyt, koska kamera on toisen sovelluksen käytössä</string>
+    <string name="camera_error_text">Droid Dashcam: Videon tallennus lopetettiin, koska laitteen kamera lakkasi toimimasta</string>
     <string name="camera_external">Ulkoinen USB-kamera</string>
     <string name="camera_focal_length">Polttoväli</string>
     <string name="camera_fov_text">Katselukulmat (16:9)</string>
@@ -59,7 +59,7 @@
     <string name="msg_android_r_deleting_manual_tip_text">Jos asensit sovelluksen uudelleen Android 11:een, vanhat tiedostot on poistettava manuaalisesti</string>
     <string name="msg_app_has_lost_camera_control_text">Kameran hallinta on menetetty DroidDashcamille. Avaa DroidDashcam uudelleen saadaksesi kameran hallinnan takaisin.</string>
     <string name="msg_battery_optimization_tip_text">Akun optimointi -&gt; Kaikki sovellukset -&gt; Droid Dashcam -&gt; Älä optimoi /säästä</string>
-    <string name="msg_camera_died_text">DroidDashcam: Kamera lakkasi toimimasta odottamatta, käynnistyy uudelleen…</string>
+    <string name="msg_camera_died_text">Droid Dashcam: Kamera lakkasi toimimasta odottamatta, käynnistyy uudelleen…</string>
     <string name="msg_camera_not_opened">Kamera ei ole käynnissä</string>
     <string name="msg_close_settings_before_recording_text">Sulje sovellusasetukset ennen tallennuksen aloittamista</string>
     <string name="msg_could_not_enable_microphone">Mikrofonin kytkeminen päälle epäonnistui, tallennus jatkuu ilman ääntä</string>
@@ -130,7 +130,7 @@
     <string name="prefs_audio_bitrate_text">Bittinopeus (laatu)</string>
     <string name="prefs_audio_rate_text">Näytteenottotaajuus</string>
     <string name="prefs_audio_recording_text">Äänitys</string>
-    <string name="prefs_audio_settings_sum_text">Laatu, pois /päällä äänen tallennus</string>
+    <string name="prefs_audio_settings_sum_text">Laatu, pois/päällä äänen tallennus</string>
     <string name="prefs_audio_settings_text">Ääniasetukset</string>
     <string name="prefs_audio_stereo_text">Stereot</string>
     <string name="prefs_auto_start_app_launch_sum_text">Aloita videon tallennus automaattisesti, kun sovellus käynnistyy</string>
@@ -233,7 +233,7 @@
     <string name="prefs_rules_video_space_text">Kaikkien videoiden enimmäismuistikapasiteetti (silmukkatallennus)</string>
     <string name="prefs_screen_autostart_sum_text">Kun käynnistät sovelluksen, kytke lataus päälle /pois päältä, käynnistä järjestelmä</string>
     <string name="prefs_screen_autostart_text">Aloita tallennus automaattisesti</string>
-    <string name="prefs_screen_ui_summary_text">Näyttö nopea /pitkä painallus, näyttö pois päältä, osoitteen ja nopeuden näyttö, ponnahdusikkuna, painikkeet ja paljon muuta</string>
+    <string name="prefs_screen_ui_summary_text">Näyttö nopea/pitkä painallus, näyttö pois päältä, osoitteen ja nopeuden näyttö, ponnahdusikkuna, painikkeet ja paljon muuta</string>
     <string name="prefs_screen_ui_title">Käyttöliittymä (UI)</string>
     <string name="prefs_screen_video_day_night_mode_sum_text">Vaihtaa automaattisesti kameran päivä-/yötilaa tiettyinä aikoina</string>
     <string name="prefs_screen_video_day_night_mode_text">Automaattinen päivä/yö-asetukset</string>
@@ -241,7 +241,7 @@
     <string name="prefs_settings_fps_sum_text">Enemmän FPS:ää – tasaisempi video, mutta nopeampi akun tyhjeneminen. On parempi asettaa ensimmäinen arvo pienimmäksi (toinen voi olla suurempi), jotta äänitys onnistuu paremmin pimeässä</string>
     <string name="prefs_share_sum_text">Lähetä tämä sovellus ystävillesi</string>
     <string name="prefs_share_text">Jaa tämä</string>
-    <string name="prefs_show_audio_btn_text">Äänen tallennus päälle /pois päältä</string>
+    <string name="prefs_show_audio_btn_text">Äänen tallennus päälle/pois päältä</string>
     <string name="prefs_show_buttons_sum_text">Painikkeet kameran vaihtamiseen, äänen tallennus päälle /pois päältä, salama, yötila, videon päällekirjoituksen estäminen</string>
     <string name="prefs_show_buttons_text">Painikkeet näytöllä</string>
     <string name="prefs_show_camera_change_btn_text">Kameran vaihto</string>
@@ -266,7 +266,7 @@
     <string name="prefs_subtitles_date_format_text">Päivämäärämuoto</string>
     <string name="prefs_subtitles_date_text">Treffiaika)</string>
     <string name="prefs_subtitles_date_time_system_text">Järjestelmällinen</string>
-    <string name="prefs_subtitles_in_english_text">Englannin kieliset tekstitykset</string>
+    <string name="prefs_subtitles_in_english_text">Englanninkieliset tekstitykset</string>
     <string name="prefs_subtitles_settings_sum_text">Peittovideon tekstitykset: päivämäärä (aika), sijaintiosoite, koordinaatit ja nopeus</string>
     <string name="prefs_subtitles_settings_text">Tekstitysasetukset</string>
     <string name="prefs_subtitles_size_text">Suurenna tekstin kokoa</string>
@@ -283,7 +283,7 @@
     <string name="prefs_tip_apply_auto_rec_on_text">Palaa aloitusnäyttöön (tallenteet) ottaaksesi tämän asetuksen käyttöön ja käynnistääksesi seurantapalvelun</string>
     <string name="prefs_toolbar_title_setting">asetukset</string>
     <string name="prefs_ui_click_none_text">Ei mitään tehtävää</string>
-    <string name="prefs_ui_click_start_stop_rec_text">Aloita /lopeta tallennus</string>
+    <string name="prefs_ui_click_start_stop_rec_text">Aloita/lopeta tallennus</string>
     <string name="prefs_ui_click_text">Napauta näyttöä nopeasti</string>
     <string name="prefs_ui_long_click_text">Paina näyttöä pitkään</string>
     <string name="prefs_value_secs_few_text">sekuntia</string>
