change description `record voice` (if it talking about video) to `video`

--- a/languages/ja/strings.xml
+++ b/languages/ja/strings.xml
@@ -62,14 +62,14 @@
     <string name="msg_camera_died_text">DroidDashcam：カメラが予期せず動作を停止し、再起動しました…</string>
     <string name="msg_camera_not_opened">カメラが動作していません</string>
     <string name="msg_close_settings_before_recording_text">記録を開始する前にアプリケーション設定を閉じます</string>
-    <string name="msg_could_not_enable_microphone">マイクをオンにできませんでした。録音は音声なしで続行されます</string>
+    <string name="msg_could_not_enable_microphone">マイクをオンにできませんでした。録画は音声なしで続行されます</string>
     <string name="msg_could_not_found_autostart_settings_text">このアプリケーションからこれらの設定を開くことができませんでした。デフォルトのデバイスシステム設定デフォルトのアプリケーションを使用してそれらを見つけてみてください</string>
     <string name="msg_could_not_open_text">アプリケーションを開くことができませんでした…</string>
     <string name="msg_could_not_start_floating_window_text">フローティングウィンドウの開始に失敗しました</string>
     <string name="msg_detected_impact_text">Gセンサーが衝撃を検出しました。ビデオは上書きされないようにブロックされます</string>
     <string name="msg_dlg_found_old_videos_message">アプリを再インストールしたようです。ループ録画中にアプリが削除できない古い動画があります。新しいビデオを録画する前に、ビデオ画面で手動で削除してください。 Android 11以降では、再インストール後、アプリケーションは古いファイルへのアクセス権を失います。または、記録フォルダに書き込み権限を与えることができます</string>
     <string name="msg_dlg_found_old_videos_title">古いビデオファイルが見つかりました</string>
-    <string name="msg_dlg_incorrect_folder_path">無効なフォルダ。パスを変更しないでください。特定のフォルダに権限を付与する必要があります。設定で録音フォルダを変更できます。</string>
+    <string name="msg_dlg_incorrect_folder_path">無効なフォルダ。パスを変更しないでください。特定のフォルダに権限を付与する必要があります。設定で録画フォルダを変更できます。</string>
     <string name="msg_initializing_please_wait">初期化中…お待ちください！</string>
     <string name="msg_no_browser">リンクを開くには、Webアプリをインストールしてください</string>
     <string name="msg_no_gps_signal">GPS信号がありません</string>
@@ -80,18 +80,18 @@
     <string name="msg_photo_failed_to_take">写真を撮れませんでした</string>
     <string name="msg_photo_was_saved">写真を保存しました</string>
     <string name="msg_please_close_other_app_and_restart_text">カメラを使用している他のアプリケーションを閉じ、このアプリケーションを再起動してください</string>
-    <string name="msg_record_path_has_changed_text">保存（書き込み）の許可がないか、許可されていないため、録音フォルダが変更されました</string>
+    <string name="msg_record_path_has_changed_text">保存（書き込み）の許可がないか、許可されていないため、録画フォルダが変更されました</string>
     <string name="msg_recorder_init_error_file_not_found">古いビデオを削除するか、SDカードをフォーマットするか、別のビデオを試してください。また、最大ビデオ録画スペースを制限します（少ないほど良いです）。保存されたビデオの数が多いと、このような問題が発生する可能性があります。設定/FAQのSDカードに関するFAQも参照してください。外部カードの代わりに電話のメモリに書き込んでみることもできます</string>
-    <string name="msg_recording_stopping_not_enough_memory_text">続行するのに十分なメモリがないため、録音を停止します</string>
-    <string name="msg_settings_opened_stopped_recording_text">録音を停止…（設定が開かれました）</string>
+    <string name="msg_recording_stopping_not_enough_memory_text">続行するのに十分なメモリがないため、録画を停止します</string>
+    <string name="msg_settings_opened_stopped_recording_text">録画を停止…（設定が開かれました）</string>
     <string name="msg_should_stop_recording_before_closing_service">最初に記録を停止してから、サービスを閉じることができます</string>
-    <string name="msg_stop_rec_too_fast_text">開始直後に録音を停止する前に、1秒待ってください</string>
+    <string name="msg_stop_rec_too_fast_text">開始直後に録画を停止する前に、1秒待ってください</string>
     <string name="msg_stop_recording_to_change_camera_text">カメラを変更するには、現在の録画を停止する必要があります</string>
     <string name="msg_to_close_this_service_close_app">このサービスを閉じるには、最初にDroidDashcamアプリを最小化または閉じます</string>
     <string name="msg_video_become_locked_text">ビデオは上書きされないようにブロックされます。</string>
     <string name="msg_video_folder_size">許可された最大サイズからのすべてのビデオのサイズ</string>
     <string name="msg_video_has_locked_text">ビデオはロックされて保存され、次のビデオもロック済みとしてマークされます（ボタンをクリックするとキャンセルできます）</string>
-    <string name="msg_video_rec_battery_not_enough_text">デバイスに十分なバッテリー電力がありません。充電するか、充電が1％を超える場合は録音を開始します</string>
+    <string name="msg_video_rec_battery_not_enough_text">デバイスに十分なバッテリー電力がありません。充電するか、充電が1％を超える場合は録画を開始します</string>
     <string name="msg_video_recorder_error">ビデオレコーダーに問題が発生しました。</string>
     <string name="msg_voice_tts_lang_data_missing_text">TTS（Android Text-to-Speech）の言語パックがインストールされていません。インターネットをオンにしてダウンロードを開始します</string>
     <string name="msg_auto_recording_service_was_stopped">ビデオバックグラウンドサービスの自動開始を停止しました。 DroidDashcamアプリを開いて、もう一度起動します。</string>
@@ -103,10 +103,10 @@
     <string name="notification_start_service_error_sub_text">通知をクリックして、アプリケーションを起動します。すべてのアプリケーションに対する権限がないか、デバイスがロックされています</string>
     <string name="notification_start_service_error_text">デバイスの起動時に記録サービスを開始できませんでした</string>
     <string name="notification_stop_text">やめる</string>
-    <string name="notification_subtitle_to_auto_start_stop_rec_text">自動録音オン/オフ用</string>
-    <string name="notification_could_not_start_recording_service">録音サービスを開始できませんでした。このアプリのバッテリー最適化を無効にするにはタップします</string>
+    <string name="notification_subtitle_to_auto_start_stop_rec_text">自動録画オン/オフ用</string>
+    <string name="notification_could_not_start_recording_service">録画サービスを開始できませんでした。このアプリのバッテリー最適化を無効にするにはタップします</string>
 
-    <string name="permission_audio_dlg_msg">ビデオを録音するときにオーディオトラックを録音するには、オーディオが必要です</string>
+    <string name="permission_audio_dlg_msg">ビデオを録画するときにオーディオトラックを録音するには、オーディオが必要です</string>
     <string name="permission_audio_dlg_title">オーディオ解像度</string>
     <string name="permission_camera_dlg_msg">カメラは、ビデオ録画とカメラプレビューに必要です。</string>
     <string name="permission_camera_dlg_title">カメラの解像度</string>
@@ -138,16 +138,16 @@
     <string name="prefs_auto_start_aux_category_text">AUX（オーディオジャック）</string>
     <string name="prefs_auto_start_bl_category_text">Bluetooth</string>
     <string name="prefs_auto_start_bl_device_text">Bluetoothデバイスまたは任意のデバイスを選択します</string>
-    <string name="prefs_auto_start_bl_sum_text">Bluetoothデバイスが接続されると自動的に録音を開始します。デバイスの再起動後にBluetooth追跡サービスを開始するには、パスワードがある場合はデバイス（画面）のロックを解除する必要があります</string>
+    <string name="prefs_auto_start_bl_sum_text">Bluetoothデバイスが接続されると自動的に録画を開始します。デバイスの再起動後にBluetooth追跡サービスを開始するには、パスワードがある場合はデバイス（画面）のロックを解除する必要があります</string>
     <string name="prefs_auto_start_bl_text">Bluetoothデバイスを接続するときに起動する</string>
-    <string name="prefs_auto_start_boot_sum_text">システムの起動時に自動的に録音を開始します。パスワードがある場合は、デバイス（画面）のロックを解除する必要があります。ロード後、システムがアプリケーションに起動中であることを通知するまでに数分かかる場合があります。</string>
+    <string name="prefs_auto_start_boot_sum_text">システムの起動時に自動的に録画を開始します。パスワードがある場合は、デバイス（画面）のロックを解除する必要があります。ロード後、システムがアプリケーションに起動中であることを通知するまでに数分かかる場合があります。</string>
     <string name="prefs_auto_start_boot_text">システムの起動時</string>
     <string name="prefs_auto_start_power_category_text">充電時</string>
-    <string name="prefs_auto_start_power_sum_text">充電時に自動的に録音を開始します。デバイスの再起動後に充電追跡サービスを開始するには、パスワードがある場合はデバイス（画面）のロックを解除する必要があります</string>
+    <string name="prefs_auto_start_power_sum_text">充電時に自動的に録画を開始します。デバイスの再起動後に充電追跡サービスを開始するには、パスワードがある場合はデバイス（画面）のロックを解除する必要があります</string>
     <string name="prefs_auto_start_power_text">充電接続時に開始</string>
     <string name="prefs_auto_stop_bl_text">Bluetoothデバイスから切断すると停止します</string>
     <string name="prefs_auto_stop_power_text">充電中は切断を停止します</string>
-    <string name="prefs_aux_auto_start_sum_text">オーディオジャック（AUX）に接続すると、自動的に録音を開始します</string>
+    <string name="prefs_aux_auto_start_sum_text">オーディオジャック（AUX）に接続すると、自動的に録画を開始します</string>
     <string name="prefs_aux_auto_start_text">オーディオジャック（AUX）に接続して実行</string>
     <string name="prefs_aux_auto_stop_text">オーディオジャック（AUX）から切断すると停止します</string>
     <string name="prefs_background_location_sum_text">許可設定がされていません。バックグラウンドでビデオを録画している間、速度、住所、座標を更新する必要があります。ここをクリックして許可設定を行ってください</string>
@@ -181,13 +181,13 @@
     <string name="prefs_info_more_category_text">情報/詳細..。</string>
     <string name="prefs_kill_services_sum_text">アプリをバックグラウンドで自動再生して実行できるようにするための設定がデバイスにあります。ここをクリックして、アプリケーションを例外に追加し（自動起動などを許可）、バックグラウンドで実行できるようにします。禁止されている場合は、画面がオフのときに実行できるようにします。</string>
     <string name="prefs_kill_services_text">バックグラウンド作業を許可する</string>
-    <string name="prefs_launch_app_none_text">選ばれなかった</string>
+    <string name="prefs_launch_app_none_text">なし</string>
     <string name="prefs_launch_app_text">ボタンランチャーアプリケーション</string>
     <string name="prefs_location_manager">ロケーションマネージャー（非推奨）</string>
     <string name="prefs_location_manager_gps_only_text">GPSのみを使用して位置を更新します（ネットワークは使用しないでください）</string>
     <string name="prefs_location_method_provider_sum_text">速度の値が悪い場合は、古い方法を試してください。値がゼロであるか、ほとんど更新されない場合は、新しい方法を試してください</string>
     <string name="prefs_location_provider_method_text">位置取得方式（GPS）</string>
-    <string name="prefs_location_update_frequency_text">GPS更新間隔</string>
+    <string name="prefs_location_update_frequency_text">GPS更新頻度</string>
     <string name="prefs_meters_accuracy_value_text">メートルの精度</string>
     <string name="prefs_optical_zoom_text">光学ズーム（ズーム）/焦点距離</string>
     <string name="prefs_orientation_landscape">横向き</string>
@@ -207,7 +207,7 @@
     <string name="prefs_other_show_coordinates_text">座標</string>
     <string name="prefs_other_show_speed_text">現在の速度</string>
     <string name="prefs_other_show_ui_elements_text">画面に表示する項目</string>
-    <string name="prefs_other_video_duration_text">ビデオの長さ-保存する頻度</string>
+    <string name="prefs_other_video_duration_text">ビデオの長さ-保存する間隔</string>
     <string name="prefs_overlay_app_btn_text">アプリケーションを起動します</string>
     <string name="prefs_overlay_buttons_text">フローティングウィンドウのボタン/要素</string>
     <string name="prefs_overlay_close_btn_text">ウィンドウを閉じる</string>
@@ -227,12 +227,12 @@
     <string name="prefs_rules_auto_lock_file_vibrate_text">衝撃を検出したときの振動</string>
     <string name="prefs_rules_auto_start_camera_motion_text">動きが検出されたら録画を開始します</string>
     <string name="prefs_rules_auto_start_speed_text">速度が等しい/速いときに記録を開始します（GPSに基づく）</string>
-    <string name="prefs_rules_auto_stop_after_specific_time_text">後に録音を停止します</string>
+    <string name="prefs_rules_auto_stop_after_specific_time_text">後に録画を停止します</string>
     <string name="prefs_rules_auto_stop_camera_motion_text">動きがなくなったら録画を停止します</string>
     <string name="prefs_rules_auto_stop_speed_text">速度が遅くなったときに記録を停止します（GPSに基づく）</string>
     <string name="prefs_rules_video_space_text">すべてのビデオの最大メモリ容量（ループ録画）</string>
     <string name="prefs_screen_autostart_sum_text">アプリケーションを起動したら、充電のオン/オフを切り替え、システムを起動します</string>
-    <string name="prefs_screen_autostart_text">録音の自動開始</string>
+    <string name="prefs_screen_autostart_text">録画の自動開始</string>
     <string name="prefs_screen_ui_summary_text">画面の高速/長押し、画面のオフ、アドレスと速度の表示、ポップアップウィンドウ、ボタンなど</string>
     <string name="prefs_screen_ui_title">インターフェイス（UI）</string>
     <string name="prefs_screen_video_day_night_mode_sum_text">特定の時間にカメラの日中/夜モードを自動的に切り替えます</string>
@@ -245,19 +245,19 @@
     <string name="prefs_show_buttons_sum_text">カメラの変更、音声録音のオン/オフ、フラッシュ、ナイトモード、ビデオの上書きのブロックを行うためのボタン</string>
     <string name="prefs_show_buttons_text">画面上のボタン</string>
     <string name="prefs_show_camera_change_btn_text">カメラ交換</string>
-    <string name="prefs_show_day_night_mode_btn_text">デイ/ナイト/オートモード</string>
+    <string name="prefs_show_day_night_mode_btn_text">日中/夜/自動モード</string>
     <string name="prefs_show_flash_btn_text">フラッシュのオン/オフ</string>
     <string name="prefs_show_lock_btn_text">動画の上書きをブロックする</string>
     <string name="prefs_show_overlay_btn_sum_text">すべてのアプリケーションの上にコントロールボタンのあるウィンドウを表示します</string>
     <string name="prefs_show_overlay_btn_text">フローティングウィンドウを表示</string>
     <string name="prefs_show_status_bar_text">システムステータスバーを表示する</string>
-    <string name="prefs_show_take_photo_btn_text">写真を作るには</string>
+    <string name="prefs_show_take_photo_btn_text">写真撮影</string>
     <string name="prefs_show_ui_elements_sum_text">住所、速度、座標</string>
     <string name="prefs_stabilization_eis_text">電子（デジタル、EIS）-推奨</string>
     <string name="prefs_stabilization_not_supported_by_camera_or_device_text">現在のカメラではサポートされていません。メーカーはしばしばその使用を制限します-それは標準のカメラアプリケーションでのみ利用可能です</string>
     <string name="prefs_stabilization_ois_text">オプティカル（OIS）</string>
-    <string name="prefs_start_stop_voice_sum_text">開始時、停止時、または録音エラー時の音</string>
-    <string name="prefs_start_stop_voice_text">録音状況</string>
+    <string name="prefs_start_stop_voice_sum_text">開始時、停止時、または録画エラー時の音</string>
+    <string name="prefs_start_stop_voice_text">録画状況</string>
     <string name="prefs_subtitles_address_text">住所</string>
     <string name="prefs_subtitles_color_text">字幕色の選択</string>
     <string name="prefs_subtitles_coords_text">座標</string>
@@ -283,7 +283,7 @@
     <string name="prefs_tip_apply_auto_rec_on_text">ホーム画面（録画）に戻ってこの設定を適用し、追跡サービスを開始します</string>
     <string name="prefs_toolbar_title_setting">設定</string>
     <string name="prefs_ui_click_none_text">何もしません</string>
-    <string name="prefs_ui_click_start_stop_rec_text">録音の開始/停止</string>
+    <string name="prefs_ui_click_start_stop_rec_text">録画の開始/停止</string>
     <string name="prefs_ui_click_text">画面をすばやくタップする</string>
     <string name="prefs_ui_long_click_text">画面を長押しします</string>
     <string name="prefs_value_secs_few_text">秒</string>
