Updated polish translation comments
Changed comments in polish translation from russian to polish

--- a/languages/pl/strings.xml
+++ b/languages/pl/strings.xml
@@ -1,9 +1,9 @@
 <resources>
       
-  <!-- ПРИМЕЧАНИЯ для переводчиков:
-        - перевод нужно делать только того текста, который внутри тега <string>ТЕКСТ</string>
-        - английские слова не нужно переводить
-        - есть специальные символы в тексте, которые не нужно изменять, например:
+  <!-- UWAGI dla tłumaczy:
+        - tylko tekst umieszczony wewnątrz znacznika <string>TEXT</string> powinien zostać przetłumaczony
+        - angielskie słowa nie muszą być tłumaczone
+        - w tekście znajdują się znaki specjalne, których nie trzeba tłumaczyć/zmieniać ich formy, na przykład:
             1) \n
             2) %1$s %2$s
             3) %1$.1fx
@@ -15,7 +15,7 @@
             9) \%%
             10) %1$d\%%
             11) /
-        символы, которые начинаются на % используются для поставления чисел или текстов при запущенной программы
+        znaki zaczynające się symbolem % są używane do podstawiania liczb i tekstu podczas działania programu
     -->
       
   <string name="app_name">Droid Dashcam - Rejestrator jazdy</string>
