--- a/languages/en/strings.xml
+++ b/languages/en/strings.xml
@@ -184,7 +184,7 @@
     <string name="prefs_kill_services_text">Allowing background and off screen work</string>
     <string name="prefs_launch_app_none_text">Not chosen</string>
     <string name="prefs_launch_app_text">App to launch by the button</string>
-    <string name="prefs_location_manager">Location Manager (old method)</string>
+    <string name="prefs_location_manager">Location Manager (deprecated)</string>
     <string name="prefs_location_method_provider_sum_text">If speed values are bad then try the old method. If values are zero or rarely updated then try the new method</string>
     <string name="prefs_location_provider_method_text">Location (GPS) provider method</string>
     <string name="prefs_meters_accuracy_value_text">meters of accuracy</string>
